--- a/Form validation/index.html
+++ b/Form validation/index.html
@@ -17,7 +17,7 @@
     <div class="container">
       <div class="content">
         <div class="logo">
-          <img src="images/pubg.svg" alt="" />
+          <img src="images/pubg.jpg" alt="" />
         </div>
         <div class="image"></div>
         <div class="text">
